Add location image endpoints
